feat: add node-html-parser

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "node-html-parser": "^6.1.4"
   }
 }
