--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "link-preview",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
