--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,7 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           wranglerVersion: '2.13.0'
+          preCommands: |
+            npm ci
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
